2008-04-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ../../apps/nns (::nns::ProcessCommandLine): Fixed inccorrect
	* ../../apps/nns.man: checking for wrong#args in the code handling
	* ../../apps/nnsd.man: the options -host and -port. Reworked
	  the descriptiond of the applications a bit.

	* ../../apps/nnslog: New application and its documentation, a
	* ../../apps/nnslog.man: stripped down form of 'nns search
	  -continuous *' with different output (log of events).

2008-04-30  Andreas Kupries  <andreask@activestate.com>

	* nns.tcl (::nameserv::configure): Fixed [Bug 1954771], bringing
	* pkgIndex.tcl: missing variable into scope. Thanks to Joe Brandt
	* nns_client:man: <vonbane@users.sourceforge.net> for both report
	  and fix. Bumped version to 0.3.1.

2008-04-30  Andreas Kupries  <andreask@activestate.com>

	* nns_intro.man: New file, giving an overview of the packages and
	* nns_auto.man: applications in the module. All other documents now
	* nns_client.man: refer back to the introduction. Also clarified
	* nns_common.man: the relationship to DNS, which is none, plus
	* nns_protocol.man: reference to the Tcllib packages which do
	* nns_server.man: handle DNS. Pointed applications out as examples
	* ../../apps/nnsd.man: of use for the packages.
	* ../../apps/nns.man:

2008-04-03  Andreas Kupries  <andreask@activestate.com>

	* nns_protocol.man: Renamed nns_procotol.man, fixed the typo in
	the filename. Thanks to Reinhard Max for seeing this.

2008-03-14  Andreas Kupries  <andreask@activestate.com>

	* nns_client.man: Cleaned up a bit, replaced deprecated [lst_item]
	  usage with [def].

2008-02-29  Andreas Kupries  <andreask@activestate.com>

	* nns_auto.tcl (::nameserv::auto::Rebind, ::nameserv::auto::bind):
	* nns_auto.man: Fixed string match with bad pattern and missing
	* pkgIndex.tcl: string to match against. Version bumped to 0.2.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*