@@ -1,9 +1,9 @@
-[manpage_begin nameserv n 0.3.1]
+[manpage_begin nameserv n 0.3.2]
 [copyright {2007-2008 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {Name service facility}]
 [titledesc {Name service facility, Client}]
 [require Tcl 8.4]
-[require nameserv [opt 0.3.1]]
+[require nameserv [opt 0.3.2]]
 [require comm]
 [require logger]
 [keywords {name service} client]
@@ -198,12 +198,15 @@ and all other name service related packages hereby reserve the
 uevent-tag [term nameserv]. All their events will be posted to that
 tag.
 
-[para]
+[section EVENTS]
 
-The sole event generated by this package is [term lost-connection].
-The detail information coming with that event will be a Tcl
-dictionary. The only contained key will be [const reason], and its
-value will be a string describing why the connection was lost.
+This package generated only one event, [term lost-connection]. The
+detail information provided to that event is a Tcl dictionary. The
+only key contained in the dictionnary is [const reason], and its value
+will be a string describing why the connection was lost.
+
+This string is supplied by the underlying communication package,
+i.e. [package comm].
 
 
 [section OPTIONS]
